improvement: updated site loader with animation;

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,8 @@
     <!-- vue | JS -->
     <script type="text/javascript" src="{{ 'vue.js' | asset_url }}"></script>
 
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+
   </head>
   <body class="db-scroll-bar">
 
