--- a/assets/theme.css
+++ b/assets/theme.css
@@ -172,14 +172,14 @@ ul, ol {
 }
 .db-site-loader .svg-icon-loader {
   display: block;
-  width: 100px;
-  height: 100px;
 }
-@media only screen and (max-width: 768px) {
-  .db-site-loader .svg-icon-loader {
-    width: 60px;
-    height: 60px;
-  }
+.db-site-loader .svg-icon-loader #g_01 #g_02 {
+  transform-origin: center;
+  animation: siteLoaderTilt 1.5s ease-in-out infinite;
+}
+.db-site-loader .svg-icon-loader #g_01 #g_08 {
+  transform-origin: center;
+  animation: siteLoaderRotate 400ms ease-in-out infinite;
 }
 .db-site-loader.--show {
   translate: 0 0;
@@ -275,6 +275,37 @@ ul, ol {
   }
   62% {
     transform: translate(-22px, 5px) skew(21deg);
+  }
+}
+@keyframes siteLoaderRotate {
+  2% {
+    rotate: 90deg;
+  }
+  40% {
+    rotate: 145deg;
+  }
+  62% {
+    rotate: 190deg;
+  }
+  80% {
+    rotate: 240deg;
+  }
+  90% {
+    rotate: 360deg;
+  }
+  100% {
+    rotate: 0deg;
+  }
+}
+@keyframes siteLoaderTilt {
+  0% {
+    rotate: 10deg;
+  }
+  50% {
+    rotate: -10deg;
+  }
+  100% {
+    rotate: 10deg;
   }
 }
 /*===================*/
@@ -1343,7 +1374,7 @@ ul, ol {
 .db-widget-item.--music-player .db-widget-box .db-inner-row .db-inner-col:nth-of-type(1) {
   width: max-content;
 }
-.db-widget-item.--music-player .db-widget-box .db-inner-row .db-inner-col:nth-of-type(1) .svg-icon-play {
+.db-widget-item.--music-player .db-widget-box .db-inner-row .db-inner-col:nth-of-type(1) .db-btn--toggle-play .svg-icon-play {
   width: 60px;
   height: 60px;
 }
@@ -1362,7 +1393,6 @@ ul, ol {
   white-space: nowrap;
   display: block;
   margin: 0 0 14px;
-  animation: running-text 15s linear infinite;
 }
 .db-widget-item.--music-player .db-widget-box .db-inner-row .db-inner-col:nth-of-type(2) .music-artist {
   color: #CAC7D0;
@@ -1391,9 +1421,8 @@ ul, ol {
   display: block;
   width: max-content;
 }
-.db-widget-item.--music-player .db-widget-box:hover {
-  scale: 1.05;
-  border-color: #D47FF3;
+.db-widget-item.--music-player .db-widget-box.--is-playing .db-inner-row .db-inner-col:nth-of-type(2) .music-title {
+  animation: running-text 15s linear infinite;
 }
 .db-widget-item.--discover-collect .db-widget-box {
   background-image: url("DB_Widget03_bg-v02-814x700.jpg");
@@ -2153,6 +2182,95 @@ ul, ol {
 .db-page--home .db-section--banner.--animate-now::after {
   display: none;
   transition: display 0ms ease-in-out 2000ms;
+}
+.db-page--home .db-section--choose-your-faction {
+  display: none;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row {
+  justify-content: space-between;
+  align-items: center;
+  gap: 150px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(1) .db-inner-row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 70px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(1) .db-inner-row .db-btn--prev-card,
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(1) .db-inner-row .db-btn--next-card {
+  display: block;
+  background-color: transparent;
+  border: none;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) {
+  position: relative;
+  max-width: 580px;
+  min-width: 580px;
+  width: 100%;
+  height: 820px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item {
+  color: var(--whiteColor);
+  font-family: var(--primaryFontFamily);
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  translate: 234px 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #B522EB;
+  opacity: 0;
+  width: 320px;
+  height: 513px;
+  border: 1px solid var(--whiteColor);
+  border-radius: 30px;
+  transition: translate 600ms ease-in-out 0ms, opacity 600ms ease-in-out 0ms, width 600ms ease-in-out 0ms, height 600ms ease-in-out 0ms;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item.--1st-card {
+  z-index: 6;
+  translate: 0px 0px;
+  opacity: 0;
+  width: 418px;
+  height: 672px;
+  border-radius: 32px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item.--2nd-card {
+  z-index: 5;
+  translate: 65px 85px;
+  opacity: 1;
+  width: 391px;
+  height: 628px;
+  border-radius: 32px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item.--3rd-card {
+  z-index: 4;
+  translate: 137px 183px;
+  opacity: 1;
+  width: 359px;
+  height: 575px;
+  border-radius: 33px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item.--4th-card {
+  z-index: 3;
+  translate: 215px 283px;
+  opacity: 1;
+  width: 320px;
+  height: 513px;
+  border-radius: 30px;
+}
+.db-page--home .db-section--choose-your-faction .db-container .db-row .db-col:nth-of-type(2) .faction-card-list .faction-card-item.--5th-card {
+  z-index: 2;
+  translate: 234px 300px;
+  opacity: 0;
+  width: 320px;
+  height: 513px;
+  border-radius: 30px;
 }
 
 .db-page--about-us .db-section--about-us-banner {
