--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -569,4 +569,117 @@
       }
     }
   }
+
+  .db-section--choose-your-faction {
+    display: none;
+    
+    .db-container {
+      .db-row {
+        justify-content: space-between;
+        align-items: center;
+        gap: 150px;
+
+        .db-col {
+          &:nth-of-type(1) {
+            .db-inner-row {
+              display: flex;
+              justify-content: flex-start;
+              align-items: center;
+              gap: 70px;
+
+              .db-btn--prev-card,
+              .db-btn--next-card {
+                display: block;
+                background-color: transparent;
+                border: none;
+              }
+            }
+          }
+
+          &:nth-of-type(2) {
+            position: relative;
+            max-width: 580px;
+            min-width: 580px;
+            width: 100%;
+            height: 820px;
+
+            .faction-card-list {
+              .faction-card-item {
+                color: $whiteColor;
+                font-family: $primaryFontFamily;
+                font-size: 20px;
+                font-weight: 600;
+                text-align: center;
+
+                position: absolute;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                translate: 234px 300px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #B522EB;
+                opacity: 0;
+                width: 320px;
+                height: 513px;
+                border: 1px solid $whiteColor;
+                border-radius: 30px;
+                transition:
+                  translate 600ms ease-in-out 0ms,
+                  opacity 600ms ease-in-out 0ms,
+                  width 600ms ease-in-out 0ms,
+                  height 600ms ease-in-out 0ms;
+
+                &.--1st-card {
+                  z-index: 6;
+                  translate: 0px 0px;
+                  opacity: 0;
+                  width: 418px;
+                  height: 672px;
+                  border-radius: 32px;
+                }
+
+                &.--2nd-card {
+                  z-index: 5;
+                  translate: 65px 85px;
+                  opacity: 1;
+                  width: 391px;
+                  height: 628px;
+                  border-radius: 32px;
+                }
+
+                &.--3rd-card {
+                  z-index: 4;
+                  translate: 137px 183px;
+                  opacity: 1;
+                  width: 359px;
+                  height: 575px;
+                  border-radius: 33px;
+                }
+
+                &.--4th-card {
+                  z-index: 3;
+                  translate: 215px 283px;
+                  opacity: 1;
+                  width: 320px;
+                  height: 513px;
+                  border-radius: 30px;
+                }
+
+                &.--5th-card {
+                  z-index: 2;
+                  translate: 234px 300px;
+                  opacity: 0;
+                  width: 320px;
+                  height: 513px;
+                  border-radius: 30px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
