--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -44,78 +44,23 @@
               <div class="db-banner-its-year">
                 IT’S YEAR
               </div>
-              <div class="db-banner-content-block">
-                <div class="db-banner-2069">
+
+              <div class="db-banner-2069">
                   2069
+              </div>
+
+              <div class="db-content">
+                <div class="db-banner-and-content">
+                  AND
                 </div>
-                <div class="db-banner-and">
-                  <span>
-                    A
-                  </span>
-                  <span>
-                    N
-                  </span>
-                  <span>
-                    D
-                  </span>
-                </div>
-                <div class="db-banner-rock-the-world">
-                  Undead rock the world
+
+                <div class="db-banner-rock-the-world-content">
+                    Undead rock the world
                 </div>
               </div>
-              <div class="db-banner-featured">
-                <div class="db-banner-featured-item">
-                  <div class="featured-item-content">
-                    <div class="featured-item-title">
-                      MARKETPLACE
-                    </div>
-                    <div class="featured-item-description">
-                      Lorem ipsum dolor sit amet consec
-                    </div>
-                  </div>
-                  <div class="featured-item-image">
-                    <img class="db-img"
-                      alt=""
-                      title=""
-                      src="{{ 'About-Us__asset-featured-ds-v02.png' | asset_url }}"
-                      width=""
-                      height=""
-                      loading="lazy"/>
-                    <img class="db-img"
-                      alt=""
-                      title=""
-                      src="{{ 'About-Us__asset-featured-mb-v02.png' | asset_url }}"
-                      width=""
-                      height=""
-                      loading="lazy"/>
-                  </div>
-                </div>
-                <div class="db-banner-featured-item">
-                  <div class="featured-item-content">
-                    <div class="featured-item-title">
-                      NFT COLLECTIONS
-                    </div>
-                    <div class="featured-item-description">
-                      Lorem ipsum dolor sit amet consec
-                    </div>
-                  </div>
-                  <div class="featured-item-image">
-                    <img class="db-img"
-                      alt=""
-                      title=""
-                      src="{{ 'About-Us__asset-featured-ds-v02.png' | asset_url }}"
-                      width=""
-                      height=""
-                      loading="lazy"/>
-                    <img class="db-img"
-                      alt=""
-                      title=""
-                      src="{{ 'About-Us__asset-featured-mb-v02.png' | asset_url }}"
-                      width=""
-                      height=""
-                      loading="lazy"/>
-                  </div>
-                </div>
+
+              <div class="db-banner-rock-the-world">
+                  Undead rock the world
               </div>
 
             </div>
@@ -245,7 +190,8 @@
     </div>
   </section>
 
-  <section class="db-section db-section--about-us-resurrection">
+
+  {% comment %} <section class="db-section db-section--about-us-resurrection">
     <div class="db-container">
       <div class="db-row">
         <div class="db-col">
@@ -253,7 +199,7 @@
           <div class="button-container" ref="undeadButton">
             <div class="button">
 
-              <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" viewBox="0 0 65 65" fill="none" class="db-svg" @click="onChangeUndeadSlide">
+              <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" viewBox="0 0 65 65" fill="none" class="db-svg" @click="onChangeUndeadCardSlide">
                 <rect x="0.773809" y="0.773809" width="63.4524" height="63.4524" rx="31.7262" stroke="#AA27B1" stroke-width="1.54762"/>
                 <path d="M37.1426 33.138C37.1426 33.4475 36.9878 33.7571 36.8331 33.9118L31.7259 39.019C31.2616 39.4833 30.4878 39.4833 30.0235 39.019C29.5592 38.5547 29.5592 37.7809 30.0235 37.3166L34.2021 33.138L30.0235 28.9594C29.5592 28.4952 29.5592 27.7214 30.0235 27.2571C30.4878 26.7928 31.2616 26.7928 31.7259 27.2571L36.6783 32.2094C36.9878 32.519 37.1426 32.8285 37.1426 33.138Z" fill="#AA27B1"/>
               </svg>
@@ -263,30 +209,16 @@
 
           <div class="slider-container">
             <ul class="slider-list" ref="undeadSlider">
-              <li class="card active">
-                <img src="{{ 'About-Us__asset-undead-v01-1254x1254.png' | asset_url }}" alt="">
-              </li>
-              <li class="card next">
-                <img src="{{ 'About-Us__asset-undead-v02-1254x1254.png' | asset_url }}" alt="">
-              </li>
-              <li class="card next">
-                <img src="{{ 'About-Us__asset-undead-v01-1254x1254.png' | asset_url }}" alt="">
-              </li>
-              <li class="card last">
-                <img src="{{ 'About-Us__asset-undead-v02-1254x1254.png' | asset_url }}" alt="">
+              <li class="card" v-for="(undead, index) in undeadData" :class="loadUndeadCardSliderPosition(index)">
+                <img :src="undead.image_url" alt="">
               </li>
             </ul>
           </div>
 
           <div class="side-slider-container">
-            <ul class="side-slider-list">
+            <ul class="side-slider-list" ref="sideCardContainer">
 
-              <li class="side-card last">
-              </li>
-              <li class="side-card active"></li>
-              <li class="side-card next"></li>
-              <li class="side-card next"></li>
-
+              <li class="side-card" v-for="(undead, index) in undeadData" :style="{ 'background-image': 'url(' + undead.image_url + ')' }" :class="loadUndeadSideCardSliderPosition(index)"></li>
             </ul>
           </div>
         </div>
@@ -326,6 +258,22 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <section class="db-section db-section--about-us-coming-soon">
+
+    <div class="db-container">
+      
+      <div class="db-row">
+        <div class="db-col">
+          STATION PROGRAMMING
+        </div>
+        <div class="db-col">
+          Our antenna is currently stolen. As soon as we get it back from the Party Bringers we’ll be back on the air! Stay tuned, Deadbeats...
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section class="db-section db-section--about-us-elevate">
@@ -441,7 +389,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> {% endcomment %}
 
 </div>
 <script>
@@ -451,6 +399,20 @@
     data() {
       return {
         activeButton: 'right',
+        undeadData: [
+          {
+            image_url: "{{ 'About-Us__asset-undead-v01-1254x1254.png' | asset_url }}"
+          },
+          {
+            image_url: "{{ 'About-Us__asset-undead-v02-1254x1254.png' | asset_url }}"
+          },
+          {
+            image_url: "{{ 'About-Us__asset-undead-v01-1254x1254.png' | asset_url }}"
+          },
+          {
+            image_url: "{{ 'About-Us__asset-undead-v02-1254x1254.png' | asset_url }}"
+          },
+        ],
         dataSample: [
           {
             factionName: 'THE KINGS',
@@ -550,7 +512,6 @@
         // addition
         isRight: true,
         isLeft: false,
-        cardStartIndex: 0,
       }
     },
     created() {
@@ -565,24 +526,109 @@
 
     },
     methods: {
-      loadUndeadSliderPosition(index) {
+      loadUndeadCardSliderPosition(index) {
+        let position = {
+          next: true,
+          active: false,
+          last: false,
+        }
 
+        if (index === 0) {
+          position = {
+            ...position,
+            next: false,
+            active: true
+          }
+
+          return position
+        }
+
+        if (index === this.undeadData.length - 1) {
+          position = {
+            ...position,
+            next: false,
+            last: true
+          }
+
+          if (this.undeadData.length === 2) {
+            position = {
+              ...position,
+              next: true,
+              last: false
+            }
+          }
+
+          return position
+        }
+
+        return position
       },
-      loadUndeadSideSliderPosition(index) {
-        
+      loadUndeadSideCardSliderPosition(index) {
+        let position = {
+          next: true,
+          active: false,
+          last: false
+        }
+
+        if (index === 0) {
+          position = {
+            ...position,
+            next: false,
+            active: false,
+            last: true
+          }
+
+          if (this.undeadData.length === 2) {
+            position = {
+              ...position,
+              next: true,
+              last: false,
+            }
+          }
+
+          return position
+        }
+
+        if (index === 1) {
+          position = {
+            ...position,
+            next: false,
+            active: true
+          }
+
+          return position;
+        }
+
+        return position;
       },
-      onChangeUndeadSlide() {
+      onChangeUndeadCardSlide() {
         const container = this.$refs.undeadSlider;
         const undeadButton = this.$refs.undeadButton;
+
+        this.onChangeUndeadSideCardSlide();
+
         const active = container.querySelector('.active');
         const last = container.querySelector('.last');
-        this.cardStartIndex = this.cardStartIndex + 1;
         let next = active.nextElementSibling;
 
         if (!next) {
           next = container.firstElementChild;
         }
 
+        if (this.undeadData.length === 2) {
+          active.classList.remove(['active']);
+          next.classList.remove(['next']);
+
+          active.classList.add('last');
+          next.classList.add('active');
+
+          setTimeout(() => {
+            active.classList.remove(['last']);
+            active.classList.add('next');
+          }, 600)
+
+          return;
+        }
         active.classList.remove(['active']);
         last.classList.remove(['last']);
         next.classList.remove(['next']);
@@ -595,6 +641,41 @@
         setTimeout(() => {
           undeadButton.classList.remove(['clicked'])
         }, 300)
+      },
+      onChangeUndeadSideCardSlide() {
+        const container = this.$refs.sideCardContainer
+        const active = container.querySelector('.active');
+        const last = container.querySelector('.last');
+
+        let next = active.nextElementSibling;
+
+        if (!next) {
+          next = container.firstElementChild;
+        }
+
+        if (this.undeadData.length === 2) {
+          active.classList.remove(['active']);
+          next.classList.remove(['next']);
+
+          active.classList.add('last');
+          next.classList.add('active');
+
+          setTimeout(() => {
+            active.classList.remove(['last']);
+            active.classList.add('next');
+          }, 600);
+
+          return;
+        }
+
+        active.classList.remove(['active']);
+        last.classList.remove(['last']);
+        next.classList.remove(['next']);
+
+        active.classList.add('last');
+        next.classList.add('active');
+        last.classList.add('next');
+
       },
       onChangeContent(type) {
         const container = this.$refs.contentContainer;
